Made a minor correction to the footer's gap value for better adjustment of the elements.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1174,7 +1174,7 @@ main #UpBanner #upBannerMobileImages {
 @media only screen and (max-width: 500px) {
   footer {
     display: flex;
-    gap: 4vh !important;
+    gap: 6vh !important;
   }
   #footerTop-Right {
     display: flex;
