--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -315,7 +315,7 @@ main {
     
     footer {
         display: flex;
-        gap: 4vh !important;
+        gap: 6vh !important;
     }
 
     #footerTop-Right {
